--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "request": "^2.81.0",
     "tape": "^4.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SELord/CS361_Food_Donation_App"
   }
 }
